--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h2>Tip: Check your console</h2>
         <div id="app"></div>
         <a href="https://juejin.cn/post/7110232056826691591#heading-15" target="_blank">TypeScript的16道题</a><br/>
-        <a href="https://www.tslang.cn/play/index.html" target="_blank">TS在线联系</a>
+        <a href="https://www.tslang.cn/play/index.html" target="_blank">TS在线练习</a>
     </body>
     
 </html>
